update: add metadata to ProjectDTOs